styles/index.css
:root {
  --title-color: #34675C;
  --text-color: #67757E;
  --projects-fixed-height: auto;
}

* {
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  background: linear-gradient(180deg, #b7dcfe, #e7f6ff) no-repeat;
}

a {
  text-decoration: none;
  color: var(--text-color);
}

.container {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.header {
  position: fixed;
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 50px;
  padding: 0 37px;
  padding-right: 27px;
  color: white;
  background-color: #4CB5F5;
  box-shadow: 0 0 5px #ABABAB;
  z-index: 1000;
}

.header h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 20px;
}

.header i {
  display: inline-block;
  font-size: 24px;
  padding: 8px;
  margin: auto 0;
}

.about,
.projects,
.contact {
  padding: 40px 37px 0 37px;
  box-shadow: 0 2px 5px #DEDEDE;
}

.about {
  position: relative;
  background: #fff url("images/About_BG.svg") bottom/100% no-repeat;
  background-size: cover;
  padding: 40px 37px 10px 37px;
  margin-top: 50px;
}

.projects {
  background: linear-gradient(#f4f8fc, #edf0f4);
  padding-bottom: 5px;
}

.projects-group {
  position: relative;
}

.projects__fixed__height {
  min-height: var(--projects-fixed-height);
}

.contact {
  background: #fff url("images/Contact_BG.svg") bottom/100% no-repeat;
  padding-bottom: 40px;
}

.about h1,
.projects h1,
.contact h1 {
  text-align: center;
  color: var(--title-color);
  margin: 0;
  font-family: 'Lato', sans-serif;
  font-size: 24px;
  font-weight: 700;
}

.menu-desktop {
  display: none;
}

.menu {
  position: fixed;
  top: 50px;
  right: -170px;
  width: 170px;
  padding: 15px 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background: linear-gradient(#78AEE8, #4CB5F5);
  transition: right 0.3s ease-out;
  z-index: 1000;
}

.about .menu p {
  color: white;
  margin: 10px 0;
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  cursor: pointer;
}

.menu-show {
  right: 0;
}

.menu-show-background {
  display: none;
}

.menu-show-background-show {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(13, 27, 36, 0.6);
  z-index: 100;
}

.about-info,
.contact-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about-info img {
  width: 140px;
  margin: 34px 0;
  border-radius: 50%;
}

.about-info p {
  color: var(--text-color);
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  text-align: center;
}

.project {
  position: relative;
  align-self: flex-start;
  width: 100%;
  margin: 40px 0;
  border: 1px solid #BFBFBF;
  border-radius: 6px;
  background-color: white;
  overflow: hidden;
  box-shadow: 0px 3px 5px #cbcaca;
}

.project:nth-child(1) {
  z-index: 100;
}

.project:nth-child(2) {
  z-index: 10;
}

.project img {
  width: 100%;
  margin: 0;
  border-bottom: 1px solid #BFBFBF;
}

.project h2 {
  color: var(--text-color);
  font-family: 'Lato', sans-serif;
  font-size: 23px;
  text-align: center;
  margin-top: 7px;
}

.project__description {
  position: relative;
  padding-left: 17px;
  color: var(--text-color);
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease-out;
  z-index: 100;
}

.project__description__show {
  max-height: 250px;
}

.project__more,
.project__less {
  position: absolute;
  right: 0;
  bottom: 10px;
  font-family: 'Open-sans', sans-serif;
  font-size: 14px;
  padding: 12px;
  color: #FF752D;
  cursor: pointer;
}

.project__less {
  display: none;
}

.contact .contact__email,
.contact .contact__related-pages {
  display: flex;
  align-items: center;
  color: var(--text-color);
  font-family: 'Lato', sans-serif;
}

.contact .contact__email {
  justify-content: center;
  margin: 40px 0;
  height: 1.5em;
  font-size: 22px;
}

.contact .contact__email i {
  margin-right: 10px;
}

.contact .contact__related-pages a {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact .contact__related-pages p {
  margin: 5px;
}

.fa-github {
  font-size: 35px;
}

.fa-envelope {
  height: 18px;
}

/*######################################################################################
############################### MEDIA QUERIES ##########################################
######################################################################################*/

@media only screen and (max-width: 640px) and (orientation: landscape) {
  .about {
    background: #fff url("images/About_BG_Mobile_Landscape.svg") bottom/100% no-repeat;
  }
  .contact {
    background: #fff url("images/Contact_BG_Mobile_Landscape.svg") bottom/100% no-repeat;
  }
}

@media only screen and (min-width: 450px) and (max-width: 599px) {
  .header,
  .about,
  .projects,
  .contact {
    padding-left: 60px;
    padding-right: 60px;
  }
  .header {
    padding-right: 50px;
  }
}

@media only screen and (min-width: 600px) {
  .header i {
    display: none;
  }
  .menu-desktop {
    display: flex;
    align-items: center;
    margin-top: 3px;
  }
  .menu-desktop p {
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 17px;
    padding: 0 10px;
    cursor: pointer;
    user-select: none;
  }
  .about {
    background: #fff url("images/About_BG_Mobile_Landscape.svg") bottom/100% no-repeat;
  }
  .about-info,
  .contact-info {
    flex-direction: row;
    justify-content: space-between;
  }
  .about-info img {
    margin-right: 37px;
  }
  .projects {
    padding-bottom: 40px;
  }
  .projects-group {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }
  .project {
    width: 47%;
    margin-bottom: 0;
  }
  .project h2 {
    font-size: 19px;
  }
  .project__more,
  .project__less {
    bottom: 5px;
  }
  .contact {
    background: #fff url("images/Contact_BG_Mobile_Landscape.svg") bottom/100% no-repeat;
  }
}

@media only screen and (min-width: 800px) {
  .container,
  .header {
    width: 80%;
    margin: auto;
    box-shadow: 0 0 8px #ABABAB;
  }
  .project__more,
  .project__less {
    bottom: 5px;
  }
  .contact-info {
    padding: 0 50px;
  }
}

@media only screen and (min-width: 1025px) {
  .container,
  .header {
    width: 900px;
  }
  .about {
    background: #fff url("images/About_BG_Desktop.svg") bottom/100% no-repeat;
  }
  .contact {
    background: #fff url("images/Contact_BG_Desktop.svg") bottom/100% no-repeat;
  }
  .project {
    width: 31%;
  }
  .project:hover .project__description {
    /* This max-height must be greater than the 'project__description' will ever be */
    max-height: 250px;
    transition: max-height 0.5s ease-out;
  }
  .project__more,
  .project__less {
    display: none;
  }
}

@media only screen and (min-width: 1100px) {
  .menu-desktop p {
    padding: 0 20px;
  }
  .menu-desktop p:last-child {
    padding-right: 10px;
  }
}

@media screen and (min-width: 1920px) {
  .container {
    width: 1400px;
  }
  .header {
    width: 1400px;
    height: 80px;
  }
  .header h1 {
    font-size: 28px;
  }
  .menu-desktop p {
    font-size: 23px;
  }
  .about h1 {
    margin-top: 30px;
  }
  .about h1,
  .projects h1,
  .contact h1 {
    font-size: 29px;
  }
  .about-info img {
    width: 250px;
    margin-left: 30px;
    margin-bottom: 60px;
  }
  .about-info p {
    font-size: 24px;
    margin-left: 50px;
    margin-right: 50px;
  }
  .project h2 {
    font-size: 27px;
  }
  .project__description p {
    font-size: 24px;
  }
  .contact .contact__email {
    height: auto;
    font-size: 31px;
  }
  .fa-envelope {
    position: relative;
    bottom: 3px;
  }
  .contact__related-pages i {
    font-size: 50px;
  }
  .contact__related-pages p {
    font-size: 25px;
  }
}

